tests/failing/fizzbuzz.db
const var i: Int!

when (i % 3 = 0 && i % 5 = 0) "FizzBuzz"?
else when (i % 3 = 0) "Fizz"?
else when (i % 5 = 0) "Buzz"?
else i? 

when (i < 20) i++!
i = 0!